# scrapp_taxonomy

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pipeline.yml  publish.yml
src/scrapp_taxonomy/: __init__.py  __main__.py  cli.py  factory.py  formatters.py  ports.py
src/scrapp_taxonomy/domain/: __init__.py  models.py
src/scrapp_taxonomy/infrastructure/: http.py
src/scrapp_taxonomy/services/: assessment.py  html_analyzer.py  robots.py
tests/: smoke_test.py  test_assessment.py  test_cli.py  test_factory.py  test_formatters.py  test_html_analyzer.py  test_robots.py
