[project]
name = "scrapp-taxonomy"
version = "0.1.0"
description = "Assess robots.txt constraints and discover extractable public page signals."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Carlos Daniel Jiménez", email = "danieljimenez88m@gmail.com" }]
keywords = ["robots.txt", "scraping", "crawler", "taxonomy", "uv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/carlosjimenez88M/scrapp_taxonomy"
Repository = "https://github.com/carlosjimenez88M/scrapp_taxonomy"
"Bug Tracker" = "https://github.com/carlosjimenez88M/scrapp_taxonomy/issues"
Changelog = "https://github.com/carlosjimenez88M/scrapp_taxonomy/blob/master/CHANGELOG.md"

[project.scripts]
scrapp-taxonomy = "scrapp_taxonomy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapp_taxonomy"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.18",
]
